--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
             <version>2.6.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>spring-cloud-gcp-logging</artifactId>
+            <version>2.0.4</version>
+        </dependency>
+
+
 
     </dependencies>
 
